Add: New REST endpoint to find a single message
- The endpoint returns the message if the status is published
- Change to java 11
- Update dependency versions
Resolves: Dev-130