@@ -6,23 +6,21 @@
   <artifactId>dealog-message-service</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
-    <compiler-plugin.version>3.8.1</compiler-plugin.version>
+    <commons-lang3.version>3.11</commons-lang3.version>
     <dealog-common.version>1.0.0-SNAPSHOT</dealog-common.version>
-    <hibernate-spatial.version>5.4.15.Final</hibernate-spatial.version>
-    <lombok.version>1.18.2</lombok.version>
+    <hibernate-spatial.version>5.4.22.Final</hibernate-spatial.version>
+    <lombok.version>1.18.16</lombok.version>
+    <maven.compiler.version>3.8.1</maven.compiler.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <postgis-jdbc.version>2.5.0</postgis-jdbc.version>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus-plugin.version>1.6.1.Final</quarkus-plugin.version>
     <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-    <quarkus.platform.version>1.6.1.Final</quarkus.platform.version>
-    <rest-assured.version>4.3.0</rest-assured.version>
-    <slf4j.version>1.6.1</slf4j.version>
-    <surefire-plugin.version>2.22.1</surefire-plugin.version>
+    <quarkus.platform.version>1.8.3.Final</quarkus.platform.version>
+    <quarkus-plugin.version>1.8.3.Final</quarkus-plugin.version>
+    <rest-assured.version>4.3.1</rest-assured.version>
+    <surefire-plugin.version>2.22.2</surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -124,8 +122,10 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang3.version}</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
@@ -141,8 +141,12 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${compiler-plugin.version}</version>
+        <version>${maven.compiler.version}</version>
+        <configuration>
+          <release>${maven.compiler.release}</release>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -152,6 +156,9 @@
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
@@ -181,6 +188,9 @@
                     <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                     <maven.home>${maven.home}</maven.home>
                   </systemPropertyVariables>
+                  <argLine>
+                    --illegal-access=permit
+                  </argLine>
                 </configuration>
               </execution>
             </executions>
